--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+<head>
+    <title>Our Funky HTML Page</title>
+    <meta name="description" content="Our first page">
+    <meta name="keywords" content="html tutorial template">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    Content goes here.
 </body>
 </html>
