--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-    <title>Our Funky HTML Page</title>
-    <meta name="description" content="Our first page">
+    <title>Test</title>
+    <meta name="description" content="My first page">
     <meta name="keywords" content="html tutorial template">
 </head>
 <body>
